RESOLVED FIXED 153204
REGRESSION(r194601): Fix the jsc timeout option of jsc.cpp
https://bugs.webkit.org/show_bug.cgi?id=153204
Summary REGRESSION(r194601): Fix the jsc timeout option of jsc.cpp
Csaba Osztrogonác
Reported 2016-01-18 04:25:53 PST
http://trac.webkit.org/r194601 changed JSC_timeout to JSCTEST_timeout, because all JSC_* should be valid JSC option since http://trac.webkit.org/r194606 . But JSC_timeout isn't a valid JSC option ( handled by runtime/Options.<h|cpp> ), it is only an environment variable for jsc.cpp.
Attachments
Patch (1.31 KB, patch)
2016-01-18 04:26 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-01-18 04:26:53 PST
WebKit Commit Bot
Comment 2 2016-01-18 07:28:38 PST
Comment on attachment 269215 [details] Patch Clearing flags on attachment: 269215 Committed r195233: <http://trac.webkit.org/changeset/195233>
WebKit Commit Bot
Comment 3 2016-01-18 07:28:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.