REGRESSION(r194601): Fix the jsc timeout option of jsc.cpp https://bugs.webkit.org/show_bug.cgi?id=153204

Reviewed by Michael Catanzaro.

* jsc.cpp:
(main):


Canonical link: https://commits.webkit.org/171276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195233 268f45cc-cd09-0410-ab3c-d52691b4dbfc